<resources>
    <string name="app_name">CompuStore</string>
    <string name="categories_title">Categorías de Productos</string>
    <string name="products_title">Productos</string>
    <string name="assembly_title">Ensambles</string>
    <string name="clients_title">Clientes</string>
    <string name="orders_title">Órdenes</string>
    <string name="reports_title">Reportes</string>

    <string name="category_add">Agregar una nueva categoría</string>
    <string name="product_add">Agregar un nuevo producto</string>
    <string name="client_add">Agregar un nuevo cliente</string>
    <string name="assembly_add">Agregar un nuevo cliente</string>

    <string name="category_update">Modificar una categoría</string>
    <string name="product_update">Modificar un cliente</string>
    <string name="client_update">Modificar un cliente</string>
    <string name="assembly_update">Modificar un cliente</string>


    <string name="category_delete">Eliminar una categoría</string>
    <string name="product_delete">Eliminar una categoría</string>
    <string name="client_delete">Eliminar un cliente</string>
    <string name="assembly_delete">Eliminar un cliente</string>


    <string name="add_msg">Se ha guardado la selección</string>
    <string name="dlt_msg">Se ha borrado la selección</string>
    <string name="add_msg_test">PRUEBA</string>
    <string name="error_msg">No se ha guardado la selección</string>
    <string name="error_msg1">El precio no es aceptable</string>
    <string name="error_msg2">Las descripciones deben ser distintas</string>

    <string name="dummy_title">Titulo</string>
    <string name="write_hint">Escribe ...</string>
    <string name="client_firstname">Nombre: </string>
    <string name="client_lastname">Apellido: </string>
    <string name="client_address">Dirección: </string>
    <string name="client_email">Email: </string>
    <string name="client_phone1">Tel. 1: </string>
    <string name="client_phone2">Tel. 2: </string>
    <string name="client_phone3">Tel. 3: </string>


    <string name="save_text">Guardar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="modify_text">Modificar</string>
    <string name="delete_text">Eliminar</string>
    <string name="formward_text">Avanzar estado a...</string>
    <string name="return_text">Regresar estado a...</string>
    <string name="sure_text">¿Está seguro?</string>
    <string name="add_change_log">Comentarios:</string>

    <string-array name="client_filter_array">
        <item>Nombre</item>
        <item>Apellido</item>
        <item>Dirección</item>
        <item>Teléfono</item>
        <item>Email</item>
    </string-array>

    <string-array name="filtro">
        <item>Nombre</item>
        <item>Fecha</item>
        <item>Monto</item>
    </string-array>
</resources>
